--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- GOOGLE FONT -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- FONT AWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Vue -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <!-- Custom css -->
   <link rel="stylesheet" href="css/style.css">
@@ -16,6 +22,33 @@
 <body>
 
   <div id="app">
+    <div class="container-carousel">
+      <div class="carousel-csm">
+  
+        <div class="carousel-img">
+          <!-- js add image -->
+          <div class="img-car">
+            <img :src="images[viewImage].src">
+            <div class="carousel-text">
+              <h3>{{images[viewImage].title}}</h3>
+              <p>{{images[viewImage].text}}</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- thumbnails -->
+        <div class="carousel-thumbnails">
+          <div class="carousel-thumb">
+            <!-- js add thumb -->
+          </div>
+  
+          <!-- button -->
+          <button @click="nextOrPrev(false)" type="button" class="btn-csm btn-up"><i class="fa-solid fa-chevron-up"></i></button>
+          <button @click="nextOrPrev(true)" type="button"  class="btn-csm btn-down"><i class="fa-solid fa-chevron-down"></i></button>
+  
+        </div>
+      </div>
+    </div>
   </div>
   
   <script src="./js/script.js"></script>
