--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div class="carousel-csm">
   
         <div class="carousel-img">
-          <!-- js add image -->
+          <!-- vue add image -->
           <div class="img-car">
-            <img :src="images[viewImage].src">
+            <img :src="elements[viewImage].src">
             <div class="carousel-text">
-              <h3>{{images[viewImage].title}}</h3>
-              <p>{{images[viewImage].text}}</p>
+              <h3>{{elements[viewImage].title}}</h3>
+              <p>{{elements[viewImage].text}}</p>
             </div>
           </div>
         </div>
@@ -39,7 +39,13 @@
         <!-- thumbnails -->
         <div class="carousel-thumbnails">
           <div class="carousel-thumb">
-            <!-- js add thumb -->
+            <!-- vue add thumb -->
+            <img
+              class="thumb-car"
+              v-for="(el,index) in elements"
+              :src="el.src"
+              :class="{'active': viewImage === index}"
+              @click="viewImage = index">
           </div>
   
           <!-- button -->
